# FirstCPPOGL

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
chess/: chess_figures.cpp  chess_figures.h
include/glad/: glad.h
src/: chess.cpp  chess.h  chessSpriteHandler.cpp  chessSpriteHandler.h  eventSystem.cxx  eventSystem.h  glad.c  helpers.cpp  helpers.h  input.cpp  input.h  move.cpp  move.h  uiElements.cpp  uiElements.h
src/gl/: gl_helpers.cpp  gl_helpers.h
src/gl/exceptions/: glException.h  glShaderCompileException.cpp
src/glBoilerplateAndHelpers/: sprite.cpp  sprite.h
src/helpers/: helpers.cpp  helpers.h
src/helpers/gl_helpers/: gl_helpers.cpp  gl_helpers.h
src/shaders/: fragshader.frag  highlight.frag  highlight.vert  sprite.frag  text.frag  text.vert  ui.frag  ui.vert
src/tutorial/hello_triangle/: hello_triangle.cpp  hello_triangle.h  hello_triangle.vert
test/Google_tests/: CMakeLists.txt
test/Google_tests/unit_tests/gl/exceptions/: glShaderCompileExceptionTest.cpp
